<resources>
    <string name="app_name">Генератор паролей</string>
    <string name="create_password">Создать пароль</string>
    <string name="Password">ДлинныйИСложныйПароль</string>
    <string name="capital_letters">Заглавные буквы</string>
    <string name="numbers">Числа</string>
    <string name="symbols">Символы</string>
    <string name="small_letters">Строчныые буквы</string>
    <string name="description">description</string>
    <string name="passwordLength">Длинна пароля</string>
    <string name="generator">Генератор</string>
    <string name="dictionary">Словарь</string>
    <string name="dictionaryText">Should be a dictionary here, \n but I haven\'t finished it</string>
</resources>